Fix positioning on smaller devices

--- a/css/home.css
+++ b/css/home.css
@@ -22,8 +22,8 @@ img {
 	float: right;
 
 	display: inline;
-	height: 3em;
-	width: 3em;
+	height: 5em;
+	width: 5em;
 }
 
 #closemenubutton {
@@ -34,15 +34,14 @@ img {
 	height: 5em;
 	width: 5em;
 
-	margin-top: 2em;
-	margin-right: 2em;
+	margin-top: 5vh;
+	margin-right: 5vh;
 }
 
 #menuoverlay {
 	width: 100%;
 	height: 100%;
 
-	background-color: rgba(191, 191, 191, 0.96);
 
 	position: absolute;
 	top: 0;
@@ -54,6 +53,22 @@ img {
 
 	text-align: center;
 	font-size: xx-large;
+}
+
+#menuoverlay::before {
+	content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.95;
+  z-index: -1;
+	background-color: grey;
+
+	-webkit-filter:blur(4px);
+    filter:blur(4px);
+
 }
 
 #menuoverlay ul {
@@ -94,7 +109,7 @@ a:link {
 }
 a:hover {
 	font-weight: bold;
-	color: rgba(87, 87, 87, 0.5);
+	color: white;
 }
 
 
@@ -162,7 +177,7 @@ a:hover {
 
 /* Header Specific */
 
-@media (max-width:670px) {
+@media (max-width:400px){
 	header #menu {
 		display: none;
 	}
@@ -186,8 +201,9 @@ a:hover {
 		position: fixed;
 
 		bottom: 1em;
-
 		left: 22vw;
+
+		border-radius: 1vw;
 
 		text-align: center;
 	}
@@ -211,7 +227,7 @@ a:hover {
 	}
 }
 
-@media (min-width: 671px) {
+@media (min-width: 400px) {
 	header #menu {
 		float: right;
 	}
@@ -246,8 +262,9 @@ a:hover {
 
 	footer {
 		width: 30vw;
-		height: 70px;
+		height: 8vw;
 
+		border-radius: 2vw;
 
 		background-color: rgba(192, 192, 192, 0.8);
 
@@ -258,25 +275,24 @@ a:hover {
 
 	.contact {
 		float: left;
-
-		width: 10vw;
-		height: 70px;
-
-		text-align: center;
-		font-size: smaller;
-		font-weight: bold;
 	}
 
 	.container {
 		position: relative;
-		width: 100%;
+		width: 10vw;
+		height: 8vw;
+
+		vertical-align: middle;
+
 	}
 
 	.contact img {
-		height: 50px;
-		width: 50px;
+		width: 5vw;
+		height: 5vw;
 
-		margin-top: 10px;
+		position: absolute;
+		top: 1.5vw;
+		left: 2.5vw;
 	}
 
 	.contact .overlay {
